@@ -6,8 +6,9 @@ import me.imsergioh.pluginsapi.instance.menu.CoreMenu;
 import org.bukkit.Material;
 import org.bukkit.Sound;
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemStack;
 import us.smartmc.core.exception.CorePluginException;
+import us.smartmc.core.instance.player.PlayerCurrenciesHandler;
+import us.smartmc.core.instance.player.PlayerCurrencyCoin;
 import us.smartmc.core.instance.player.SmartCorePlayer;
 import us.smartmc.lobbycosmetics.LobbyCosmetics;
 import us.smartmc.lobbycosmetics.instance.cosmetic.ICosmetic;
@@ -19,10 +20,7 @@ import us.smartmc.lobbycosmetics.message.CosmeticsMainMessages;
 import us.smartmc.lobbycosmetics.message.CosmeticsSectionMessages;
 import us.smartmc.lobbycosmetics.util.ItemsUtil;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 
 public class CosmeticBuyMenu extends CoreMenu {
 
@@ -47,12 +45,12 @@ public class CosmeticBuyMenu extends CoreMenu {
         List<String> lore = ItemsUtil.getBuilderCosmeticItemDescription(playerSession, info, cosmetic);
         String rarityLine = lore.get(0);
         lore.clear();
-        lore.addAll(List.of(" ", rarityLine, " "));
+        lore.addAll(Arrays.asList(" ", rarityLine, " "));
         buyBuilder.lore(lore);
-        set(4, buyBuilder.get(player));
+        set(4, buyBuilder.get(initPlayer));
 
-        set(12, getBuyItem().get(player), "confirmCosmeticPurchase");
-        set(14, getCancelBuyItem().get(player), "cancelCosmeticPurchase");
+        set(12, getBuyItem().get(initPlayer), "confirmCosmeticPurchase");
+        set(14, getCancelBuyItem().get(initPlayer), "cancelCosmeticPurchase");
     }
 
     public ItemBuilder getBuyItem() {
@@ -71,11 +69,12 @@ public class CosmeticBuyMenu extends CoreMenu {
         pendingRequests.remove(player.getUniqueId());
         SmartCorePlayer smartCorePlayer = SmartCorePlayer.get(player);
         long cost = cosmetic.getCost();
-        long currentBalance = SmartCorePlayer.get(player).getCoins();
+        long currentBalance = SmartCorePlayer.get(player).getCurrenciesHandler().get(PlayerCurrencyCoin.SMARTCOINS);
         if (cost <= currentBalance) {
             try {
                 String reason = LobbyCosmetics.getCosmeticsMainMessages().get(player, PlayerLanguages.get(player.getUniqueId()), "cosmetic_buyed_coins_reason");
-                smartCorePlayer.removeCoins(cost, reason);
+                PlayerCurrenciesHandler handler = smartCorePlayer.getCurrenciesHandler();
+                handler.remove(PlayerCurrencyCoin.SMARTCOINS, cost, reason);
                 player.playSound(player.getLocation(), Sound.LEVEL_UP, 0.5F, 1.0F);
                 CosmeticPlayerSession session = CosmeticPlayerSession.get(player);
                 session.getData().activateCosmetic(cosmetic);
